[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "nameko_pymemcache/_version.py"
# Accept tags like "1.0.0" directly (no "v" prefix required)
tag_regex = r"^(?:[v])?(?P<version>[^\+]+)(?P<suffix>.*)?$"
